{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "9eebdbbe-716a-4294-8cea-f01bddad9765",
            "actions": [
                {
                    "name": "WASD",
                    "type": "Value",
                    "id": "cc13db50-6506-4ff9-9bef-9fafb1e38cd2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "f0e3db20-9807-4350-a9cd-8bd2125f36bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "a654c0f3-bc67-4d0e-8590-a76885dd8ede",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Vector2D",
                    "id": "695d6e22-b64f-4be9-b397-b9b782572953",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "16c8a808-d92a-4bd9-9911-b1a1af7cf1e5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "118ea90e-b1f8-45c6-9fe5-157c7090d407",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "11cd6edb-8341-46be-8548-8834ae4d30fd",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "06272330-a60d-477e-96bd-016626f05f6d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Vector2D",
                    "id": "64e81dd1-818f-4da3-ad8d-6d406bf5c038",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e15055cc-8d8c-401e-9814-2a78fb31d212",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "Normalize(max=1)",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0aa83667-1211-46ab-8df5-b562d8b2fd5f",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "Normalize(min=-1)",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7ce3dc1f-ba3e-4400-9152-dfa162b76413",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "Normalize(min=-1)",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "339de43a-b722-4e44-8c5a-9f69aae42861",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "Normalize(max=1)",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5bd4fd7c-2ab4-4eef-b94a-f6107c970625",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9ca4132-cd85-4e34-94ed-7cff1cf1da43",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0302cdf-8520-48bf-ae55-e2ea2e34356c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}